# simglucose

./: .gitignore  LICENSE  MODIFICATIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: custom_reward_function.py  run_gym.py  run_gymnasium.py  run_multi_patient_multi_scenario.py
simglucose/: utils.py
simglucose/actuator/: pump.py
simglucose/controller/: basal_bolus_ctrller.py
simglucose/envs/: __init__.py  batched_env.py  simglucose_gym_env.py
simglucose/patient/: t1dpatient.py  t1dpatient_torch.py
simglucose/sensor/: cgm.py
simglucose/simulation/: user_interface.py
tests/: test_gym.py  test_gym_custom_scenario.py  test_gymnasium.py  test_reset.py  test_reward_fun.py  test_seed.py  test_torch_patient.py
tests/results/: adolescent#001.csv  adolescent#002.csv  adolescent#003.csv  adolescent#004.csv  adolescent#005.csv  adolescent#006.csv  adolescent#007.csv  adolescent#008.csv  adolescent#009.csv  adolescent#010.csv  adult#001.csv  adult#002.csv  adult#003.csv  adult#004.csv  adult#005.csv  adult#006.csv  adult#007.csv  adult#008.csv  adult#009.csv  adult#010.csv  child#001.csv  child#002.csv  child#003.csv  child#004.csv  child#009.csv
